# Eigenpulse

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml  rust-toolchain.toml  wasm-opt-shim.sh
.cargo/: config.toml
.dev-team/: i18n-keys.md  i18n-plan.md
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml
app-client/: Cargo.toml
app-client/src/: lib.rs
app/i18n/: en.json  zh-CN.json
app/src/: admin.rs  app.rs  lib.rs  login.rs  main.rs  modules.rs  security.rs  sse.rs
app/src/views/: dashboard.rs  mod.rs  notifications.rs  reports.rs  settings.rs  status.rs  today.rs
app/src/views/settings/: mod.rs  notifications.rs  security.rs
app/tests/: smoke.rs
assets/: chart-loader.js  manifest.webmanifest  styles.css  sw.js  theme-init.js
crates/api/: Cargo.toml
crates/api/src/: errors.rs  healthz.rs  lib.rs  notify.rs  today.rs  whoami.rs
crates/auth/: Cargo.toml
crates/auth/examples/: reset_password.rs
crates/auth/src/: argon.rs  bootstrap.rs  lib.rs  login_guard.rs  middleware.rs  password.rs  pat.rs  proxy.rs  session.rs
crates/core/: Cargo.toml
crates/core/i18n/: en.json  zh-CN.json
crates/core/src/: activity.rs  api_error.rs  clock.rs  descriptor.rs  errors.rs  escape.rs  fmt.rs  ids.rs  lib.rs  media.rs  module.rs  money.rs  nav.rs  notify_msg.rs  refs.rs  registry.rs  severity.rs  state.rs  text.rs  tone.rs
crates/db/: Cargo.toml
crates/db/src/: archive.rs  backup.rs  lib.rs  lock.rs  pool.rs
crates/db/tests/: migration_checksums.json  migration_immutability.rs
crates/i18n/: Cargo.toml  build.rs
crates/i18n/i18n/: en.json  zh-CN.json
crates/i18n/src/: api_error.rs  client.rs  cookie.rs  errors.rs  key_scan_tests.rs  lib.rs  locale.rs  middleware.rs  server_fns.rs
crates/notify/: Cargo.toml
crates/notify/src/: bark.rs  bus.rs  channels.rs  discord.rs  inapp.rs  lib.rs  smtp.rs  telegram.rs
crates/ui/: Cargo.toml
crates/ui/i18n/: en.json  zh-CN.json
crates/ui/src/: card.rs  chart.rs  chart_bars.rs  confirm_dialog.rs  dialog.rs  donut.rs  empty_state.rs  error_slot.rs  field.rs  forms.rs  heatmap.rs  icon.rs  kpi.rs  lib.rs  load_error.rs  notifications.rs  page_head.rs  ring.rs  row_action.rs  section_label.rs  sidebar.rs  stat.rs  tabs.rs  tag.rs  toast.rs  topbar.rs  tweaks.rs  tweaks_panel.rs
docs/: follow-ups.md  ops.md
examples/shortcuts/: README.md  quick-expense.json  quick-notify.json  test.sh
migrations/: 0001_init.sql  0001_platform.sql  0002_activity_currency.sql  0002_user_locale.sql  0003_activity_amount_integer.sql  0003_activity_reference_indexes.sql  0004_activity_amount_text.sql
modules/finance/: Cargo.toml
modules/finance/i18n/: en.json  zh-CN.json
modules/finance/migrations/: 001_finance.sql  002_finance_crud.sql  002_multi_currency.sql  003_finance_remove_archive_usage.sql  003_money_text.sql  004_currency_remark.sql  004_remove_demo_seed.sql  005_category_icon.sql
modules/finance/src/: amount.rs  api.rs  charts.rs  crud_tests.rs  lib.rs  model.rs  page.rs  server_fns.rs  suggestions.rs  view.rs  widgets.rs
modules/finance/src/server_fns/: domain.rs  mod.rs
modules/finance/src/view/: mod.rs
modules/finance/tests/: crud.rs
modules/fitness/: Cargo.toml
modules/fitness/i18n/: en.json  zh-CN.json
modules/fitness/migrations/: 001_fitness.sql  002_fit_set_reserved.sql  002_remove_demo_seed.sql
modules/fitness/src/: api.rs  lib.rs  media.rs  model.rs  server_fns.rs  view.rs
modules/journal/: Cargo.toml
modules/journal/i18n/: en.json  zh-CN.json
modules/journal/migrations/: 001_journal.sql
modules/journal/src/: api.rs  crud_tests.rs  lib.rs  model.rs  server_fns.rs  view.rs
modules/learning/: Cargo.toml
modules/learning/i18n/: en.json  zh-CN.json
modules/learning/migrations/: 001_learning.sql  002_remove_demo_seed.sql
modules/learning/src/: api.rs  lib.rs  model.rs  server_fns.rs  view.rs
modules/mod_marketplace/: Cargo.toml
modules/mod_marketplace/i18n/: en.json  zh-CN.json
modules/mod_marketplace/src/: lib.rs  view.rs
playwright/: README.md  global-setup.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
playwright/tests/: accessibility.spec.ts  helpers.ts  hydration.spec.ts
scripts/: check-wasm-size.sh  leptos-postbuild.sh
tools/charts/: THIRD_PARTY_NOTICES.md  package-lock.json  package.json
tools/charts/scripts/: build.mjs
tools/charts/src/: index.js  options.js
tools/charts/test/: assets.test.mjs  options.test.mjs
