[package]
name        = "eigenpulse"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
default-run = "eigenpulse"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "eigenpulse"
path = "src/main.rs"
required-features = ["ssr"]

[features]
default = []
ssr = [
    "dep:axum", "dep:axum-extra", "dep:tokio", "dep:tower", "dep:tower-http",
    "dep:leptos_axum", "dep:sqlx", "dep:cookie", "dep:tracing",
    "dep:tracing-subscriber", "dep:rust-embed", "dep:mime_guess",
    "dep:rand", "dep:hex", "dep:tokio-stream", "dep:sha2",
    "dep:ep-db", "dep:ep-auth", "dep:ep-notify", "dep:ep-api",
    "dep:anyhow",
    "leptos/ssr", "leptos/nonce",
    "ep-core/ssr", "ep-db/ssr", "ep-auth/ssr", "ep-ui/ssr", "ep-i18n/ssr",
    "ep-notify/ssr", "ep-api/ssr",
    "ep-finance/ssr", "ep-fitness/ssr", "ep-learning/ssr", "ep-marketplace/ssr",
]
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen", "dep:console_error_panic_hook", "dep:web-sys",
    "ep-core/hydrate", "ep-ui/hydrate", "ep-i18n/hydrate",
    "ep-finance/hydrate", "ep-fitness/hydrate", "ep-learning/hydrate", "ep-marketplace/hydrate",
]

[dependencies]
ep-core      = { workspace = true }
ep-ui        = { workspace = true }
ep-i18n      = { workspace = true }
ep-finance   = { workspace = true }
ep-fitness   = { workspace = true }
ep-learning  = { workspace = true }
ep-marketplace = { workspace = true }

leptos        = { workspace = true }
leptos_meta   = { workspace = true }
leptos_router = { workspace = true }

serde         = { workspace = true }
# Shared on both targets: `admin::DataExport` carries `serde_json::Value`, which
# the hydrate client must deserialize from the export server fn.
serde_json    = { workspace = true }

# SSR-only
ep-db            = { workspace = true, optional = true }
ep-auth          = { workspace = true, optional = true }
ep-notify        = { workspace = true, optional = true }
ep-api           = { workspace = true, optional = true }
anyhow           = { workspace = true, optional = true }
axum             = { workspace = true, optional = true }
axum-extra       = { workspace = true, optional = true }
tokio            = { workspace = true, optional = true }
tower            = { workspace = true, optional = true }
tower-http       = { workspace = true, optional = true }
leptos_axum      = { workspace = true, optional = true }
sqlx             = { workspace = true, optional = true }
cookie           = { workspace = true, optional = true }
tracing          = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
rust-embed       = { workspace = true, optional = true }
mime_guess       = { workspace = true, optional = true }
rand             = { workspace = true, optional = true }
hex              = { workspace = true, optional = true }
tokio-stream     = { workspace = true, optional = true }
sha2             = { workspace = true, optional = true }

# hydrate-only
wasm-bindgen             = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
web-sys                  = { workspace = true, optional = true, features = ["Window", "Navigator", "ServiceWorkerContainer", "RegistrationOptions", "EventSource", "MessageEvent"] }

[dev-dependencies]
reqwest  = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "cookies"] }
tempfile = "3"

[[test]]
name              = "smoke"
path              = "tests/smoke.rs"
required-features = ["ssr"]

[package.metadata.leptos]
output-name          = "eigenpulse"
site-root            = "target/site"
site-pkg-dir         = "pkg"
style-file           = "../assets/styles.css"
assets-dir           = "../assets"
site-addr            = "0.0.0.0:3000"
browserquery         = "defaults"
bin-features         = ["ssr"]
bin-default-features = false
lib-features         = ["hydrate"]
lib-default-features = false
lib-profile-release  = "wasm-release"
