[package]
name        = "ep-auth"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[features]
default = []
ssr     = [
    "dep:axum", "dep:axum-extra", "dep:tokio", "dep:sqlx", "dep:cookie",
    "dep:argon2", "dep:rand", "dep:sha2", "dep:hex", "dep:tracing",
    "dep:leptos", "dep:leptos_axum",
    "ep-core/ssr", "ep-db/ssr"
]

[dependencies]
ep-core    = { workspace = true }
ep-db      = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
async-trait = { workspace = true }
time       = { workspace = true }

axum        = { workspace = true, optional = true }
axum-extra  = { workspace = true, optional = true }
tokio       = { workspace = true, optional = true }
sqlx        = { workspace = true, optional = true }
cookie      = { workspace = true, optional = true }
argon2      = { workspace = true, optional = true }
rand        = { workspace = true, optional = true }
sha2        = { workspace = true, optional = true }
hex         = { workspace = true, optional = true }
tracing     = { workspace = true, optional = true }
leptos      = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }
