[package]
name        = "ep-auth"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[features]
default = []
ssr     = [
    "dep:axum", "dep:axum-extra", "dep:tokio", "dep:sqlx",
    "dep:argon2", "dep:rand", "dep:sha2", "dep:hex", "dep:tracing",
    "dep:leptos", "dep:leptos_axum",
    "dep:ep-core", "dep:ep-db", "dep:serde", "dep:anyhow", "dep:time",
    "ep-core/ssr", "ep-db/ssr"
]

[dependencies]
ep-core    = { workspace = true, optional = true }
ep-db      = { workspace = true, optional = true }
serde      = { workspace = true, optional = true }
anyhow     = { workspace = true, optional = true }
time       = { workspace = true, optional = true }

axum        = { workspace = true, optional = true }
axum-extra  = { workspace = true, optional = true }
tokio       = { workspace = true, optional = true }
sqlx        = { workspace = true, optional = true }
argon2      = { workspace = true, optional = true }
rand        = { workspace = true, optional = true }
sha2        = { workspace = true, optional = true }
hex         = { workspace = true, optional = true }
tracing     = { workspace = true, optional = true }
leptos      = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }

# Examples are SSR-only utilities (use tokio / sqlx / ep_db / hash_password / purge_all_sessions —
# all gated #[cfg(feature = "ssr")] in this crate). Without `required-features`, a default-feature
# `cargo check --workspace` tries to compile them and fails E0433/E0282. The eigenpulse `[[bin]]`
# uses the same mechanism (app/Cargo.toml).
[[example]]
name              = "reset_password"
required-features = ["ssr"]

[dev-dependencies]
serde_json = { workspace = true }
