[package]
name        = "ep-core"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[features]
default = []
ssr     = ["dep:axum", "dep:sqlx", "dep:tokio", "dep:cookie", "dep:tracing", "leptos/ssr"]
hydrate = ["leptos/hydrate"]

[dependencies]
leptos      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
time        = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }

axum    = { workspace = true, optional = true }
sqlx    = { workspace = true, optional = true }
tokio   = { workspace = true, optional = true }
cookie  = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
