[package]
name        = "ep-core"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[features]
default = []
ssr     = [
    "dep:anyhow", "dep:async-trait", "dep:time",
    "dep:axum", "dep:sqlx", "dep:tokio", "dep:cookie", "dep:tracing",
    "leptos/ssr",
]
hydrate = ["leptos/hydrate"]

[dependencies]
leptos      = { workspace = true }
serde       = { workspace = true }
anyhow      = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
time        = { workspace = true, optional = true }
axum    = { workspace = true, optional = true }
sqlx    = { workspace = true, optional = true }
tokio   = { workspace = true, optional = true }
cookie  = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
