[package]
name        = "ep-core"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[features]
default = []
ssr     = [
    "dep:anyhow", "dep:async-trait", "dep:time",
    "dep:axum", "dep:sqlx", "dep:tokio", "dep:cookie", "dep:tracing",
    "dep:sha2", "dep:hex", "dep:chrono", "dep:chrono-tz",
    "leptos/ssr",
]
hydrate = ["leptos/hydrate"]

[dependencies]
leptos      = { workspace = true }
serde       = { workspace = true }
chrono      = { workspace = true, optional = true }
chrono-tz   = { workspace = true, optional = true }
anyhow      = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
time        = { workspace = true, optional = true }
axum    = { workspace = true, optional = true }
sqlx    = { workspace = true, optional = true }
tokio   = { workspace = true, optional = true }
cookie  = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
sha2    = { workspace = true, optional = true }
hex     = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
