[package]
name        = "ep-db"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[features]
default = []
ssr     = ["dep:anyhow", "dep:sqlx", "dep:tokio", "dep:tracing"]

[dependencies]
anyhow    = { workspace = true, optional = true }

sqlx      = { workspace = true, optional = true }
tokio     = { workspace = true, optional = true }
tracing   = { workspace = true, optional = true }
