[package]
name        = "ep-i18n"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
build       = "build.rs"

[features]
default = []
ssr = [
    "dep:axum",
    "dep:axum-extra",
    "dep:cookie",
    "dep:sqlx",
    "dep:tracing",
    "dep:leptos_axum",
    "leptos/ssr",
    "ep-core/ssr",
    "ep-auth/ssr",
    "ep-db/ssr",
]
hydrate = [
    "leptos/hydrate",
    "ep-core/hydrate",
    "dep:web-sys",
    "dep:wasm-bindgen",
]

[dependencies]
ep-core    = { workspace = true }
ep-auth    = { workspace = true }
ep-db      = { workspace = true }

leptos     = { workspace = true }
phf        = { version = "0.11", default-features = false }
serde      = { workspace = true }

# SSR-only
axum        = { workspace = true, optional = true }
axum-extra  = { workspace = true, optional = true }
cookie      = { workspace = true, optional = true }
tracing     = { workspace = true, optional = true }
sqlx        = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }

# hydrate-only — for the reload-mode toggle (write cookie + reload)
web-sys      = { workspace = true, optional = true, features = ["Window", "Location", "Document", "HtmlDocument"] }
wasm-bindgen = { workspace = true, optional = true }

[build-dependencies]
phf_codegen = "0.11"
serde_json  = "1"
walkdir     = "2"
