[package]
name        = "ep-notify"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[features]
default = []
ssr     = [
    "dep:tokio", "dep:sqlx", "dep:reqwest", "dep:lettre",
    "dep:tracing",
    "dep:ep-core", "dep:serde", "dep:serde_json", "dep:anyhow", "dep:async-trait",
    "ep-core/ssr"
]

[dependencies]
ep-core    = { workspace = true, optional = true }
serde      = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
anyhow     = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

tokio      = { workspace = true, optional = true }
sqlx       = { workspace = true, optional = true }
reqwest    = { workspace = true, optional = true }
lettre     = { workspace = true, optional = true }
tracing    = { workspace = true, optional = true }
