[package]
name        = "ep-notify"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[features]
default = []
ssr     = [
    "dep:tokio", "dep:sqlx", "dep:reqwest", "dep:lettre",
    "dep:tracing",
    "dep:ep-core", "dep:serde", "dep:serde_json", "dep:anyhow", "dep:async-trait",
    "ep-core/ssr"
]

[dependencies]
ep-core    = { workspace = true, optional = true }
serde      = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
anyhow     = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

tokio      = { workspace = true, optional = true }
sqlx       = { workspace = true, optional = true }
reqwest    = { workspace = true, optional = true }
lettre     = { workspace = true, optional = true }
tracing    = { workspace = true, optional = true }

[dev-dependencies]
# The provider `send()` tests bind a throwaway loopback HTTP listener on
# 127.0.0.1:0 and point a notifier at it (no real network). That needs the
# tokio `net` + `io-util` features, which the SSR build does not otherwise
# enable; dev-deps unify additively so the in-crate `#[cfg(test)]` modules
# get them. These tests only compile/run under `--features ssr` (the whole
# crate body is `#[cfg(feature = "ssr")]`).
tokio = { workspace = true, features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
