[package]
name        = "ep-ui"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[features]
default = []
ssr     = ["leptos/ssr", "ep-core/ssr"]
hydrate = ["leptos/hydrate", "ep-core/hydrate"]

[dependencies]
ep-core      = { workspace = true }
leptos       = { workspace = true }
leptos_meta  = { workspace = true }
leptos_router = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
