[package]
name        = "ep-finance"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[features]
default = []
ssr     = [
    "dep:axum", "dep:tokio", "dep:sqlx", "dep:tracing",
    "ep-core/ssr", "ep-db/ssr", "ep-auth/ssr", "ep-notify/ssr",
    "ep-ui/ssr", "ep-i18n/ssr",
    "leptos/ssr",
]
hydrate = [
    "ep-core/hydrate", "ep-ui/hydrate", "ep-i18n/hydrate",
    "leptos/hydrate",
]

[dependencies]
ep-core    = { workspace = true }
ep-db      = { workspace = true }
ep-auth    = { workspace = true }
ep-notify  = { workspace = true }
ep-ui      = { workspace = true }
ep-i18n    = { workspace = true }

leptos       = { workspace = true }
leptos_meta  = { workspace = true }
leptos_router = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
time         = { workspace = true }

axum       = { workspace = true, optional = true }
tokio      = { workspace = true, optional = true }
sqlx       = { workspace = true, optional = true }
tracing    = { workspace = true, optional = true }

[dev-dependencies]
# Integration tests in tests/crud.rs spin up an in-memory SQLite pool and
# call the SSR-side `*_inner` helpers directly. sqlx + tokio are needed for
# the test harness itself; the helpers' transitive deps are pulled in via
# the `ssr` feature on this crate when the test is invoked with
# `cargo test -p ep-finance --features ssr --test crud`.
sqlx       = { workspace = true }
tokio      = { workspace = true, features = ["macros", "rt"] }
